--- a/ledger/templates/api/tables/payables-receivables-table.html
+++ b/ledger/templates/api/tables/payables-receivables-table.html
@@ -1,5 +1,6 @@
 {% load humanize %}
 <div class="row">
+    <h4>Untagged receivables/payables</h4>
     <div class="col-md-12">
         <div id="payables-receivables-table" class="table-responsive">
             <table class="table table-hover table-sm">
