--- a/ledger/templates/api/tables/unattached-prepaids.html
+++ b/ledger/templates/api/tables/unattached-prepaids.html
@@ -1,4 +1,6 @@
 {% load humanize %}
+{% if transactions %}
+<h4>Unattached Prepaid Expenses</h4>
 <div id="transactions-table" class="table-responsive" style="max-height: 200px; overflow-y: auto;">
     <table class="table table-hover table-sm">
         <thead>
@@ -29,3 +31,4 @@
 {% block extra_js %}
 {% include "api/components/clickable-row-script.html" %}
 {% endblock %}
+{% endif %}
