--- a/ledger/templates/api/views/statement.html
+++ b/ledger/templates/api/views/statement.html
@@ -9,3 +9,7 @@
 <div id="statement-content">
     {{ statement }}
 </div>
+
+{% block extra_js %}
+{% include "api/components/clickable-row-script.html" %}
+{% endblock %}
