--- a/ledger/templates/api/components/clickable-row-script.html
+++ b/ledger/templates/api/components/clickable-row-script.html
@@ -1,19 +1,21 @@
 <script>
-$(document).ready(function(){
-    // Functionality to highlight a row
-    $('.clickable-row').click(function() {
-        console.log('click-highlight')
-        var $currentTable = $(this).closest('table');
-        if (!$(this).hasClass('table-active')) {
-            $currentTable.find('.clickable-row').removeClass('table-active');
+    $(document).ready(function(){
+        // Functionality to highlight a row
+        $('.clickable-row').click(function() {
+            console.log('click-highlight')
+            
+            // Remove 'table-active' from all rows in all tables
+            $('.clickable-row').removeClass('table-active');
+            
+            // Add 'table-active' to the clicked row
             $(this).addClass('table-active');
-        }
+        });
+    
+        // Functionality to clear the highlight from all tables
+        $('.clear-button').click(function() {
+            // Remove 'table-active' from all rows in all tables
+            $('.clickable-row').removeClass('table-active');
+        });
     });
-
-    // Functionality to clear the highlight from rows of a specific table
-    $('.clear-button').click(function() {
-        var $currentTable = $(this).closest('table');
-        $currentTable.find('.clickable-row').removeClass('table-active');
-    });
-});
-</script>
+    </script>
+    
