Changed signs on income statements detail logic

--- a/ledger/templates/api/tables/statement-detail-table.html
+++ b/ledger/templates/api/tables/statement-detail-table.html
@@ -13,7 +13,9 @@
                 <tr>
                     <td>{{ entry.journal_entry.date }}</td>
                     <td>{{ entry.journal_entry.transaction.description }}</td>
-                    <td>{% if entry.type == "credit" %}-{% endif %}${{ entry.amount|floatformat:2|intcomma }}</td>
+                    <td>
+                        ${{ entry.amount_signed|floatformat:2|intcomma }}
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
