--- a/ledger/templates/api/tables/statement-detail-table.html
+++ b/ledger/templates/api/tables/statement-detail-table.html
@@ -1,23 +1,25 @@
-{% load humanize %}
-<div id="statement-detail-table" class="table-responsive">
-    <table class="table table-hover table-sm">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Transaction</th>
-                <th>Amount</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for entry in journal_entry_items %}
+    {% load humanize %}
+<div class="fixed-table-container">
+    <div id="statement-detail-table" class="table-responsive">
+        <table class="table table-hover table-sm">
+            <thead class="fixed-header">
                 <tr>
-                    <td>{{ entry.journal_entry.date }}</td>
-                    <td>{{ entry.journal_entry.transaction.description }}</td>
-                    <td>
-                        ${{ entry.amount_signed|floatformat:2|intcomma }}
-                    </td>
+                    <th>Date</th>
+                    <th>Transaction</th>
+                    <th>Amount</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for entry in journal_entry_items %}
+                    <tr>
+                        <td>{{ entry.journal_entry.date }}</td>
+                        <td>{{ entry.journal_entry.transaction.description }}</td>
+                        <td>
+                            ${{ entry.amount_signed|floatformat:2|intcomma }}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
