--- a/ledger/templates/api/tables/statement-detail-table.html
+++ b/ledger/templates/api/tables/statement-detail-table.html
@@ -1,11 +1,11 @@
-    {% load humanize %}
+{% load humanize %}
 <div class="fixed-table-container">
     <div id="statement-detail-table" class="table-responsive">
         <table class="table table-hover table-sm">
             <thead class="fixed-header">
                 <tr>
                     <th>Date</th>
-                    <th>Transaction</th>
+                    <th class="transaction-column">Transaction</th>
                     <th>Amount</th>
                 </tr>
             </thead>
@@ -13,7 +13,7 @@
                 {% for entry in journal_entry_items %}
                     <tr>
                         <td>{{ entry.journal_entry.date }}</td>
-                        <td>{{ entry.journal_entry.transaction.description }}</td>
+                        <td class="transaction-column">{{ entry.journal_entry.transaction.description }}</td>
                         <td>
                             ${{ entry.amount_signed|floatformat:2|intcomma }}
                         </td>
