Added paystubs list to upload page

--- a/ledger/templates/api/views/upload-transactions.html
+++ b/ledger/templates/api/views/upload-transactions.html
@@ -5,7 +5,14 @@
         {{ form }}
     </div>
     <div id="textract" class="col-md-4">
-        {{ textract_form }}
+        <div class="row">
+            {{ textract_form }}
+        </div>
+        <div class="row">
+            <div id="paystubs">
+                {{ paystubs_table }}
+            </div>
+        </div>
     </div>
 </div>
 
