Changed position of paystubs table on upload page

--- a/ledger/templates/api/views/upload-transactions.html
+++ b/ledger/templates/api/views/upload-transactions.html
@@ -4,14 +4,17 @@
     <div id="csv-upload" class="col-md-4">
         {{ form }}
     </div>
-    <div id="textract" class="col-md-4">
+    <dviv id="textract" class="col-md-4">
         <div class="row">
             {{ textract_form }}
         </div>
-        <div class="row">
-            <div id="paystubs">
-                {{ paystubs_table }}
-            </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-4">
+        <div id="paystubs">
+            {{ paystubs_table }}
         </div>
     </div>
 </div>
