--- a/ledger/templates/api/tables/entity-balances-table.html
+++ b/ledger/templates/api/tables/entity-balances-table.html
@@ -1,30 +1,43 @@
 {% load humanize %}
-<h4>Balances</h4>
-<div id="payables-receivables-table" class="table-responsive">
-    <table class="table table-hover table-sm">
-        <thead>
-            <tr>
-                <th>Entity Name</th>
-                <th>Total Debits</th>
-                <th>Total Credits</th>
-                <th>Balance</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for balance in entities_balances %}
-                <tr
-                    class="clickable-row"
-                    hx-get="{% url 'entity-history' balance.entity__id %}"
-                    hx-target="#history-table" 
-                >
-                    <td>{{ balance.entity__name }}</td>
-                    <td>${{ balance.total_debits|floatformat:2|intcomma }}</td>
-                    <td>${{ balance.total_credits|floatformat:2|intcomma }}</td>
-                    <td>${{ balance.balance|floatformat:2|intcomma }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<div class="row">
+    <div class="col-md-12">
+        <h4>Balances</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <div id="entity-balances-table" class="table-responsive">
+            <table class="table table-hover table-sm">
+                <thead>
+                    <tr>
+                        <th>Entity Name</th>
+                        <th>Total Debits</th>
+                        <th>Total Credits</th>
+                        <th>Balance</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for balance in entities_balances %}
+                        <tr
+                            class="clickable-row"
+                            hx-get="{% url 'entity-history' balance.entity__id %}"
+                            hx-target="#history-table" 
+                        >
+                            <td>{{ balance.entity__name }}</td>
+                            <td>${{ balance.total_debits|floatformat:2|intcomma }}</td>
+                            <td>${{ balance.total_credits|floatformat:2|intcomma }}</td>
+                            <td>${{ balance.balance|floatformat:2|intcomma }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div id="history-table">
+            {{ entity_history_table }}
+        </div>
+    </div>
 </div>
 {% block extra_js %}
 {% include "api/components/clickable-row-script.html" %}
