--- a/ledger/templates/api/tables/entity-history-table.html
+++ b/ledger/templates/api/tables/entity-history-table.html
@@ -14,7 +14,7 @@
             {% for entry in journal_entry_items %}
                 <tr id="row-{{ entry.id }}">
                     <td>{{ entry.journal_entry.date }}</td>
-                    <td>{{ entry.journal_entry.transaction.description }}</td>
+                    <td>{{ entry.journal_entry.transaction.description|slice:":50" }}{% if entry.journal_entry.transaction.description|length > 50 %}...{% endif %}</td>
                     <td>{% if entry.type == "debit" %}-{% endif %}${{ entry.amount|floatformat:2|intcomma }}</td>
                     <td>${{ entry.balance|floatformat:2|intcomma }}</td>
                     <td>
