--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -14,11 +14,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <div id="form-div">
                     {{ entry_form }}
                 </div>
             </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <div id="paystubs">
                     {{ paystubs_table }}
