--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -93,8 +93,8 @@
                         value="{% if form.entity_name %}{{ form.entity_name }}{% elif form.entity.value %}{{ form.entity.value }}{% endif %}"
                         >
                         <datalist id="debitEntityOptions">
-                            {% for value, text in form.entity_choices %}
-                                <option value="{{ text }}">
+                            {% for entity in form.entity_choices %}
+                                <option value="{{ entity }}">
                             {% endfor %}
                         </datalist>
                     </input>
@@ -159,8 +159,8 @@
                         value="{% if form.entity_name %}{{ form.entity_name }}{% elif form.entity.value %}{{ form.entity.value }}{% endif %}"
                         >
                         <datalist id="creditEntityOptions">
-                            {% for value, text in form.entity_choices %}
-                                <option value="{{ text }}">
+                            {% for entity in form.entity_choices %}
+                                <option value="{{ entity }}">
                             {% endfor %}
                         </datalist>
                     </input>
