--- a/ledger/templates/api/components/nav.html
+++ b/ledger/templates/api/components/nav.html
@@ -9,6 +9,9 @@
                 <li class="nav-item {% if request.resolver_match.url_name == 'journal-entries' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'journal-entries' %}" hx-get="{% url 'journal-entries' %}" hx-target="#container">Entries</a>
                 </li>
+                <li class="nav-item {% if request.resolver_match.url_name == 'journal-entries-alt' %}active{% endif %}">
+                    <a class="nav-link" href="{% url 'journal-entries-alt' %}" hx-get="{% url 'journal-entries-alt' %}" hx-target="#container">Entries-A</a>
+                </li>
                 <li class="nav-item {% if request.resolver_match.url_name == 'link-transactions' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'link-transactions' %}" hx-get="{% url 'link-transactions' %}" hx-target="#container">Links</a>
                 </li>
